Added js folder

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
             </ul>
 
          
-            <div class="nav-actions">
-                <a href="pages/signup.html" class="btn-login btn-signup">Sign Up</a>
-                <a href="pages/login.html" class="btn-login">Login</a>
-            </div>
+         <div class="nav-actions">
+  <button id="signupBtn" class="btn-login btn-signup">Sign Up</button>
+  <button id="loginBtn" class="btn-login">Login</button>
+</div>
+
         </div>
     </nav>
 
@@ -40,7 +41,10 @@
                 Get your daily, weekly, and monthly bus passes in just a few clicks.
                 Welcome to Click2Pass, your digital solution for easy commuting.
             </p>
-            <a href="pages/login.html" class="hero-cta">Apply for Your Pass Now</a>
+            <button class="hero-cta" id="applyPassBtn">
+  Apply for Your Pass Now
+</button>
+
         </div>
     </div>
 
@@ -92,7 +96,10 @@
     <section class="cta-section">
         <h2>Ready to Simplify Your Commute?</h2>
         <p>Join thousands of happy commuters today.</p>
-        <a href="pages/signup.html" class="hero-cta">Create Your Account</a>
+       <button id="createAccountBtn" class="hero-cta">
+  Create Your Account
+</button>
+
     </section>
 
   
@@ -132,6 +139,9 @@
             <p>© 2025 Click2Pass. All rights reserved.</p>
         </div>
     </footer>
+
+    <script src="./js/index.js"></script>
+
 
 </body>
 </html>
