--- a/pages/login.html
+++ b/pages/login.html
@@ -18,7 +18,6 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="../index.html">Home</a></li>
-
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="nav-actions">
@@ -33,18 +32,33 @@
             <h2 class="form-title">Login</h2>
             <p class="form-subtitle">Enter your details to get started.</p>
 
-            <form action="../pages/form.html"> <div class="form-group">
-                    <label for="email-phone">Enter Email</label>
-                    <input type="text" id="email-phone" placeholder="e.g., name@example.com" required />
-                </div>
-                
+            <!-- FORM -->
+            <form id="loginForm">
                 <div class="form-group">
-                    <label for="otp">Enter Password</label>
-                    <input type="text" id="otp" placeholder="Password" required />
+                    <label for="email">Email</label>
+                    <input type="email" id="email" placeholder="e.g., name@example.com" required />
                 </div>
 
-                <button type="submit" class="btn-primary">Verify & Login</button>
+                <div class="form-group">
+    <label for="password">Password</label>
+    <input
+        type="password"
+        id="password"
+        name="password"
+        placeholder="Enter your password"
+        class="form-control"
+        required
+    />
+</div>
+
+
+                <button type="submit" class="btn-primary">Login</button>
             </form>
+
+            <p style="text-align:center; margin-top:1rem;">
+                Don't have an account? 
+                <a href="signup.html" style="color: var(--primary); font-weight:600;">Sign Up</a>
+            </p>
         </div>
     </div>
 
@@ -57,7 +71,7 @@
             <div class="footer-col">
                 <h4>Quick Links</h4>
                 <ul>
-                    <li><a href="">About Us</a></li>
+                    <li><a href="#">About Us</a></li>
                     <li><a href="#">Privacy Policy</a></li>
                     <li><a href="#">Terms of Service</a></li>
                 </ul>
@@ -80,6 +94,9 @@
             <p>© 2025 Click2Pass. All rights reserved.</p>
         </div>
     </footer>
+
+    <!-- JS -->
+    <script src="../js/login.js"></script>
 
 </body>
 </html>
