--- a/pages/signup.html
+++ b/pages/signup.html
@@ -1,125 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign Up – Click2Pass</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sign Up – Click2Pass</title>
 
-    <link rel="stylesheet" href="../css/style1.css" />
-    <link rel="stylesheet" href="../css/index-style.css" />
+  <!-- CSS -->
+  <link rel="stylesheet" href="../css/style1.css" />
+  <link rel="stylesheet" href="../css/index-style.css" />
+  <link rel="stylesheet" href="../css/signup.css" />
 
-    <link rel="stylesheet" href="../css/signup.css" />
-
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Fonts & Icons -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+    rel="stylesheet"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
 </head>
 <body>
 
-    <nav class="top-navbar">
-        <div class="nav-container">
-            <div class="logo">
-                <h2>Click<span>2Pass</span></h2>
-            </div>
+  <!-- NAVBAR -->
+  <nav class="top-navbar">
+    <div class="nav-container">
+      <div class="logo">
+        <h2>Click<span>2Pass</span></h2>
+      </div>
 
-            <ul class="nav-menu">
-                <li><a href="../index.html">Home</a></li>
-                
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+      <ul class="nav-menu">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
 
-            <div class="nav-actions">
-                <a href="login.html" class="btn-login">Login</a>
-            </div>
-        </div>
-    </nav>
-
-    <div class="form-container">
-        <div class="login-card">
-
-            <h2 class="form-title">Create Account</h2>
-            <p class="form-subtitle">
-                Sign up to get instant access to your digital bus passes
-            </p>
-
-            <form action="#" method="post">
-
-                <div class="form-group">
-                    <label for="name">Full Name</label>
-                    <input
-                        type="text"
-                        id="name"
-                        name="name"
-                        placeholder="Enter your full name"
-                        required
-                    />
-                </div>
-
-                <div class="form-group">
-                    <label for="email">Email Address</label>
-                    <input
-                        type="email"
-                        id="email"
-                        name="email"
-                        placeholder="Enter your email"
-                        required
-                    />
-                </div>
-
-                <div class="form-group">
-                    <label for="phone">Mobile Number</label>
-                    <input
-                        type="tel"
-                        id="phone"
-                        name="phone"
-                        placeholder="Enter your mobile number"
-                        pattern="[0-9]{10}"
-                        required
-                    />
-                </div>
-
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input
-                        type="password"
-                        id="password"
-                        name="password"
-                        placeholder="Create a password"
-                        required
-                    />
-                </div>
-
-                <div class="form-group">
-                    <label for="confirm-password">Confirm Password</label>
-                    <input
-                        type="password"
-                        id="confirm-password"
-                        name="confirm-password"
-                        placeholder="Re-enter your password"
-                        required
-                    />
-                </div>
-
-                <button type="submit" class="btn-primary">
-                    Sign Up
-                </button>
-
-            </form>
-
-            <p style="text-align:center; margin-top:1.5rem; font-size:0.95rem;">
-                Already have an account?
-                <a href="login.html" style="color: var(--primary); font-weight:600;">
-                    Login here
-                </a>
-            </p>
-
-        </div>
+      <div class="nav-actions">
+        <a href="login.html" class="btn-login">Login</a>
+      </div>
     </div>
+  </nav>
 
-    <footer class="footer">
-        <div class="footer-bottom">
-            <p>© 2025 Click2Pass. All rights reserved.</p>
+  <!-- SIGNUP FORM -->
+  <div class="form-container">
+    <div class="login-card">
+
+      <h2 class="form-title">Create Account</h2>
+      <p class="form-subtitle">
+        Sign up to get instant access to your digital bus passes
+      </p>
+
+      <!-- IMPORTANT: id="signupForm" -->
+      <form id="signupForm">
+
+        <div class="form-group">
+          <label for="name">Full Name</label>
+          <input
+            type="text"
+            id="name"
+            placeholder="Enter your full name"
+            required
+          />
         </div>
-    </footer>
+
+        <div class="form-group">
+          <label for="email">Email Address</label>
+          <input
+            type="email"
+            id="email"
+            placeholder="Enter your email"
+            required
+          />
+        </div>
+
+        <div class="form-group">
+          <label for="phone">Mobile Number</label>
+          <input
+            type="tel"
+            id="phone"
+            placeholder="Enter your mobile number"
+            pattern="[0-9]{10}"
+            required
+          />
+        </div>
+
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input
+            type="password"
+            id="password"
+            placeholder="Create a password"
+            required
+          />
+        </div>
+
+        <button type="submit" class="btn-primary">
+          Sign Up
+        </button>
+
+        <!-- Message Area -->
+        <p
+          id="signupMessage"
+          style="margin-top:1rem; text-align:center; font-size:0.95rem;"
+        ></p>
+
+      </form>
+
+      <p style="text-align:center; margin-top:1.5rem; font-size:0.95rem;">
+        Already have an account?
+        <a href="login.html" style="color: var(--primary); font-weight:600;">
+          Login here
+        </a>
+      </p>
+
+    </div>
+  </div>
+
+  <!-- FOOTER -->
+  <footer class="footer">
+    <div class="footer-bottom">
+      <p>© 2025 Click2Pass. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <!-- JS -->
+  <script src="../js/signup.js"></script>
 
 </body>
 </html>
